[package]
authors = ["The Rust Project Developers"]
name = "dustc_ast"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_serialize = { path = "../dustc_serialize" }
tracing = "0.1"
dustc_span = { path = "../dustc_span" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_index = { path = "../dustc_index" }
dustc_lexer = { path = "../dustc_lexer" }
dustc_macros = { path = "../dustc_macros" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
bitflags = "1.2.1"
