[package]
authors = ["The Rust Project Developers"]
name = "dustc_ast_passes"
version = "0.0.0"
edition = "2018"

[dependencies]
itertools = "0.9"
tracing = "0.1"
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_parse = { path = "../dustc_parse" }
dustc_session = { path = "../dustc_session" }
dustc_span = { path = "../dustc_span" }
dustc_ast = { path = "../dustc_ast" }
