[package]
authors = ["The Rust Project Developers"]
name = "dustc_attr"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_errors = { path = "../dustc_errors" }
dustc_span = { path = "../dustc_span" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_feature = { path = "../dustc_feature" }
dustc_lexer = { path = "../dustc_lexer" }
dustc_macros = { path = "../dustc_macros" }
dustc_session = { path = "../dustc_session" }
dustc_ast = { path = "../dustc_ast" }
