[package]
authors = ["The Rust Project Developers"]
name = "dustc_builtin_macros"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_parse_format = { path = "../dustc_parse_format" }
tracing = "0.1"
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_lexer = { path = "../dustc_lexer" }
dustc_parse = { path = "../dustc_parse" }
dustc_target = { path = "../dustc_target" }
dustc_session = { path = "../dustc_session" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
dustc_ast = { path = "../dustc_ast" }
dustc_expand = { path = "../dustc_expand" }
dustc_span = { path = "../dustc_span" }
