[package]
authors = ["The Rust Project Developers"]
name = "dustc_codegen_llvm"
version = "0.0.0"
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
bitflags = "1.0"
cstr = "0.2"
libc = "0.2"
measureme = "9.1.0"
snap = "1"
tracing = "0.1"
dustc_middle = { path = "../dustc_middle" }
dustc-demangle = "0.1.18"
dustc_attr = { path = "../dustc_attr" }
dustc_codegen_ssa = { path = "../dustc_codegen_ssa" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_fs_util = { path = "../dustc_fs_util" }
dustc_hir = { path = "../dustc_hir" }
dustc_incremental = { path = "../dustc_incremental" }
dustc_index = { path = "../dustc_index" }
dustc_llvm = { path = "../dustc_llvm" }
dustc_session = { path = "../dustc_session" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_target = { path = "../dustc_target" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
dustc_ast = { path = "../dustc_ast" }
dustc_span = { path = "../dustc_span" }
