[package]
authors = ["The Rust Project Developers"]
name = "dustc_codegen_ssa"
version = "0.0.0"
edition = "2018"

[lib]
test = false

[dependencies]
bitflags = "1.2.1"
cc = "1.0.1"
itertools = "0.9"
memmap = "0.7"
tracing = "0.1"
libc = "0.2.50"
jobserver = "0.1.11"
tempfile = "3.1"
pathdiff = "0.2.0"

dustc_serialize = { path = "../dustc_serialize" }
dustc_ast = { path = "../dustc_ast" }
dustc_span = { path = "../dustc_span" }
dustc_middle = { path = "../dustc_middle" }
dustc_apfloat = { path = "../dustc_apfloat" }
dustc_attr = { path = "../dustc_attr" }
dustc_symbol_mangling = { path = "../dustc_symbol_mangling" }
dustc_data_structures = { path = "../dustc_data_structures"}
dustc_errors = { path = "../dustc_errors" }
dustc_fs_util = { path = "../dustc_fs_util" }
dustc_hir = { path = "../dustc_hir" }
dustc_incremental = { path = "../dustc_incremental" }
dustc_index = { path = "../dustc_index" }
dustc_macros = { path = "../dustc_macros" }
dustc_target = { path = "../dustc_target" }
dustc_session = { path = "../dustc_session" }
