[package]
authors = ["The Rust Project Developers"]
name = "dustc_expand"
version = "0.0.0"
edition = "2018"
build = false

[lib]
doctest = false

[dependencies]
dustc_serialize = { path = "../dustc_serialize" }
tracing = "0.1"
dustc_span = { path = "../dustc_span" }
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
dustc_ast_passes = { path = "../dustc_ast_passes" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_lint_defs = { path = "../dustc_lint_defs" }
dustc_macros = { path = "../dustc_macros" }
dustc_lexer = { path = "../dustc_lexer" }
dustc_parse = { path = "../dustc_parse" }
dustc_session = { path = "../dustc_session" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
dustc_ast = { path = "../dustc_ast" }
