[package]
authors = ["The Rust Project Developers"]
name = "dustc_hir"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_target = { path = "../dustc_target" }
dustc_feature = { path = "../dustc_feature" }
dustc_macros = { path = "../dustc_macros" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_index = { path = "../dustc_index" }
dustc_span = { path = "../dustc_span" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_ast = { path = "../dustc_ast" }
tracing = "0.1"
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
