[package]
authors = ["The Rust Project Developers"]
name = "dustc_incremental"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_graphviz = { path = "../dustc_graphviz" }
tracing = "0.1"
rand = "0.7"
dustc_middle = { path = "../dustc_middle" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_hir = { path = "../dustc_hir" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_ast = { path = "../dustc_ast" }
dustc_macros = { path = "../dustc_macros" }
dustc_span = { path = "../dustc_span" }
dustc_fs_util = { path = "../dustc_fs_util" }
dustc_session = { path = "../dustc_session" }
