[package]
authors = ["The Rust Project Developers"]
name = "dustc_index"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
arrayvec = { version = "0.5.1", default-features = false }
dustc_serialize = { path = "../dustc_serialize" }
dustc_macros = { path = "../dustc_macros" }
