[package]
authors = ["The Rust Project Developers"]
name = "dustc_middle"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_arena = { path = "../dustc_arena" }
bitflags = "1.2.1"
tracing = "0.1"
dustc-rayon-core = "0.3.1"
polonius-engine = "0.12.0"
dustc_apfloat = { path = "../dustc_apfloat" }
dustc_attr = { path = "../dustc_attr" }
dustc_feature = { path = "../dustc_feature" }
dustc_hir = { path = "../dustc_hir" }
dustc_target = { path = "../dustc_target" }
dustc_macros = { path = "../dustc_macros" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_query_system = { path = "../dustc_query_system" }
dustc_errors = { path = "../dustc_errors" }
dustc_index = { path = "../dustc_index" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_ast = { path = "../dustc_ast" }
dustc_span = { path = "../dustc_span" }
chalk-ir = "0.55.0"
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
measureme = "9.1.0"
dustc_session = { path = "../dustc_session" }
dustc_type_ir = { path = "../dustc_type_ir" }
