[package]
authors = ["The Rust Project Developers"]
name = "dustc_passes"
version = "0.0.0"
edition = "2018"

[dependencies]
tracing = "0.1"
dustc_middle = { path = "../dustc_middle" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_hir = { path = "../dustc_hir" }
dustc_index = { path = "../dustc_index" }
dustc_session = { path = "../dustc_session" }
dustc_target = { path = "../dustc_target" }
dustc_ast = { path = "../dustc_ast" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_span = { path = "../dustc_span" }
dustc_trait_selection = { path = "../dustc_trait_selection" }
dustc_lexer = { path = "../dustc_lexer" }
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
