[package]
authors = ["The Rust Project Developers"]
name = "dustc_privacy"
version = "0.0.0"
edition = "2018"

[dependencies]
dustc_middle = { path = "../dustc_middle" }
dustc_attr = { path = "../dustc_attr" }
dustc_errors = { path = "../dustc_errors" }
dustc_hir = { path = "../dustc_hir" }
dustc_typeck = { path = "../dustc_typeck" }
dustc_session = { path = "../dustc_session" }
dustc_span = { path = "../dustc_span" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_trait_selection = { path = "../dustc_trait_selection" }
tracing = "0.1"
