[package]
authors = ["The Rust Project Developers"]
name = "dustc_query_impl"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
measureme = "9.0.0"
dustc-rayon-core = "0.3.1"
tracing = "0.1"
dustc_ast = { path = "../dustc_ast" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_hir = { path = "../dustc_hir" }
dustc_index = { path = "../dustc_index" }
dustc_macros = { path = "../dustc_macros" }
dustc_middle = { path = "../dustc_middle" }
dustc_query_system = { path = "../dustc_query_system" }
dustc_span = { path = "../dustc_span" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_session = { path = "../dustc_session" }
dustc_target = { path = "../dustc_target" }
