[package]
authors = ["The Rust Project Developers"]
name = "dustc_query_system"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_arena = { path = "../dustc_arena" }
tracing = "0.1"
dustc-rayon-core = "0.3.1"
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_macros = { path = "../dustc_macros" }
dustc_index = { path = "../dustc_index" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_session = { path = "../dustc_session" }
dustc_span = { path = "../dustc_span" }
parking_lot = "0.11"
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
