[package]
authors = ["The Rust Project Developers"]
name = "dustc_save_analysis"
version = "0.0.0"
edition = "2018"

[dependencies]
tracing = "0.1"
dustc_middle = { path = "../dustc_middle" }
dustc_ast = { path = "../dustc_ast" }
dustc_ast_pretty = { path = "../dustc_ast_pretty" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_hir = { path = "../dustc_hir" }
dustc_hir_pretty = { path = "../dustc_hir_pretty" }
dustc_lexer = { path = "../dustc_lexer" }
serde_json = "1"
dustc_session = { path = "../dustc_session" }
dustc_span = { path = "../dustc_span" }
rls-data = "0.19"
rls-span = "0.5"
