[package]
authors = ["The Rust Project Developers"]
name = "dustc_session"
version = "0.0.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
getopts = "0.2"
dustc_macros = { path = "../dustc_macros" }
tracing = "0.1"
dustc_errors = { path = "../dustc_errors" }
dustc_feature = { path = "../dustc_feature" }
dustc_target = { path = "../dustc_target" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_span = { path = "../dustc_span" }
dustc_fs_util = { path = "../dustc_fs_util" }
num_cpus = "1.0"
dustc_ast = { path = "../dustc_ast" }
dustc_lint_defs = { path = "../dustc_lint_defs" }
