[package]
authors = ["The Rust Project Developers"]
name = "dustc_trait_selection"
version = "0.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
dustc_parse_format = { path = "../dustc_parse_format" }
tracing = "0.1"
dustc_attr = { path = "../dustc_attr" }
dustc_middle = { path = "../dustc_middle" }
dustc_ast = { path = "../dustc_ast" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_hir = { path = "../dustc_hir" }
dustc_index = { path = "../dustc_index" }
dustc_infer = { path = "../dustc_infer" }
dustc_macros = { path = "../dustc_macros" }
dustc_session = { path = "../dustc_session" }
dustc_span = { path = "../dustc_span" }
dustc_target = { path = "../dustc_target" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
