[package]
authors = ["The Rust Project Developers"]
name = "dustc_traits"
version = "0.0.0"
edition = "2018"

[dependencies]
tracing = "0.1"
dustc_attr = { path = "../dustc_attr" }
dustc_middle = { path = "../dustc_middle" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_hir = { path = "../dustc_hir" }
dustc_index = { path = "../dustc_index" }
dustc_ast = { path = "../dustc_ast" }
dustc_span = { path = "../dustc_span" }
chalk-ir = "0.55.0"
chalk-solve = "0.55.0"
chalk-engine = "0.55.0"
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
dustc_infer = { path = "../dustc_infer" }
dustc_trait_selection = { path = "../dustc_trait_selection" }
