[package]
authors = ["The Rust Project Developers"]
name = "dustc_ty_utils"
version = "0.0.0"
edition = "2018"

[dependencies]
tracing = "0.1"
dustc_middle = { path = "../dustc_middle" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_hir = { path = "../dustc_hir" }
dustc_infer = { path = "../dustc_infer" }
dustc_span = { path = "../dustc_span" }
dustc_session = { path = "../dustc_session" }
dustc_target = { path = "../dustc_target" }
dustc_trait_selection = { path = "../dustc_trait_selection" }
