[package]
name = "dustc_type_ir"
version = "0.0.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[lib]
doctest = false

[dependencies]
bitflags = "1.2.1"
dustc_index = { path = "../dustc_index" }
dustc_serialize = { path = "../dustc_serialize" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_macros = { path = "../dustc_macros" }
