[package]
authors = ["The Rust Project Developers"]
name = "dustc_typeck"
version = "0.0.0"
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
dustc_arena = { path = "../dustc_arena" }
tracing = "0.1"
dustc_macros = { path = "../dustc_macros" }
dustc_middle = { path = "../dustc_middle" }
dustc_attr = { path = "../dustc_attr" }
dustc_data_structures = { path = "../dustc_data_structures" }
dustc_errors = { path = "../dustc_errors" }
dustc_hir = { path = "../dustc_hir" }
dustc_hir_pretty = { path = "../dustc_hir_pretty" }
dustc_target = { path = "../dustc_target" }
dustc_session = { path = "../dustc_session" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
dustc_ast = { path = "../dustc_ast" }
dustc_span = { path = "../dustc_span" }
dustc_index = { path = "../dustc_index" }
dustc_infer = { path = "../dustc_infer" }
dustc_trait_selection = { path = "../dustc_trait_selection" }
